--- a/package.json
+++ b/package.json
@@ -15,19 +15,22 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/three": "^0.159.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "@types/three": "^0.159.0"
+    "vite": "^5.0.3"
   },
   "type": "module",
   "dependencies": {
-    "three": "^0.159.0",
+    "@dimforge/rapier3d": "^0.12.0",
     "@threlte/core": "^7.1.2",
-    "@threlte/extras": "^8.8.1"
+    "@threlte/extras": "^8.8.1",
+    "three": "^0.159.0",
+    "three-mesh-bvh": "^0.7.3",
+    "vite-plugin-wasm": "^3.3.0"
   }
 }
