--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@dimforge/rapier3d": "^0.12.0",
     "@threlte/core": "^7.1.2",
     "@threlte/extras": "^8.8.1",
+    "sass": "^1.71.1",
     "three": "^0.159.0",
     "three-mesh-bvh": "^0.7.3",
     "vite-plugin-wasm": "^3.3.0"
